envoy-gw/config-envoy-gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gw
  namespace: envoy-gw
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller

---

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gw
  namespace: envoy-gw
spec:
  gatewayClassName: envoy-gw
  infrastructure:
    parametersRef:
        group: gateway.envoyproxy.io
        kind: EnvoyProxy
        name: envoy-gw-proxy-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: health-route
  namespace: envoy-gw
spec:
  parentRefs:
    - name: envoy-gw
  rules:
  - matches:
    - path:
        type: Exact
        value: "/health"
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.envoyproxy.io
        kind: HTTPRouteFilter
        name: health-inline-response

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: default-route
  namespace: envoy-gw
spec:
  parentRefs:
    - name: envoy-gw
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.envoyproxy.io
        kind: HTTPRouteFilter
        name: default-inline-response
